add new endpoint for collectivities